fixed scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,8 @@ a:hover {
 }
 
 ::-webkit-scrollbar {
-    height: 8px;
+    width: 0px;
+    height: 0px;
 }
 
 ::-webkit-scrollbar-thumb {
